// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Filters /> should add a new "Exists" filter 1`] = `
.emotion-74 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-74:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-74[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-74,
.emotion-74:hover,
.emotion-74:visited {
  background-color: #808080;
}

.emotion-74:hover {
  background-color: #b3b3b3;
}

.emotion-74[aria-disabled=true] {
  background-color: #808080;
}

.emotion-78 {
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-73 {
  overflow-x: auto;
}

.emotion-4 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-77 {
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-75 {
  width: 8px;
}

.emotion-76 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-76:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-76[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-76,
.emotion-76:hover,
.emotion-76:visited {
  background-color: #73b61c;
}

.emotion-76:hover {
  background-color: #96c955;
}

.emotion-76[aria-disabled=true] {
  background-color: #808080;
}

.emotion-10 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-10:hover {
  color: #ffffff;
}

.emotion-51 {
  width: 100%;
  background-color: #191919;
}

.emotion-50 {
  padding: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-22 {
  margin-left: 32px;
  border-top: 1px solid #3b3b3b;
}

.emotion-22:first-of-type {
  border-top: none;
}

.emotion-21 {
  padding: 8px;
  color: #b3b3b3;
  margin-left: -32px;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding-bottom: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-14 {
  margin: 0;
  padding: 0;
  width: 16px;
  height: 16px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-16 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-15 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-19 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 8px;
}

.emotion-18 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
}

<div
  className="emotion-78"
>
  <div
    className="emotion-73"
  >
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          analysis
        </h4>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          clip
        </h4>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Collapse Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-10"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          location
        </h4>
      </div>
      <div
        className="emotion-51"
      >
        <div
          className="emotion-50"
        >
          <div
            className="emotion-22"
          >
            <div
              className="emotion-21"
            >
              <label
                className="emotion-20"
              >
                <div
                  className="emotion-17"
                >
                  <input
                    className="emotion-14"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="location.city"
                  />
                  <div
                    className="emotion-16"
                  >
                    <svg
                      className="emotion-15"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="emotion-19"
                >
                  <span
                    className="emotion-18"
                  >
                    city
                  </span>
                </div>
              </label>
            </div>
          </div>
          <div
            className="emotion-22"
          >
            <div
              className="emotion-21"
            >
              <label
                className="emotion-20"
              >
                <div
                  className="emotion-17"
                >
                  <input
                    className="emotion-14"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="location.code"
                  />
                  <div
                    className="emotion-16"
                  >
                    <svg
                      className="emotion-15"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="emotion-19"
                >
                  <span
                    className="emotion-18"
                  >
                    code
                  </span>
                </div>
              </label>
            </div>
          </div>
          <div
            className="emotion-22"
          >
            <div
              className="emotion-21"
            >
              <label
                className="emotion-20"
              >
                <div
                  className="emotion-17"
                >
                  <input
                    className="emotion-14"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="location.country"
                  />
                  <div
                    className="emotion-16"
                  >
                    <svg
                      className="emotion-15"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="emotion-19"
                >
                  <span
                    className="emotion-18"
                  >
                    country
                  </span>
                </div>
              </label>
            </div>
          </div>
          <div
            className="emotion-22"
          >
            <div
              className="emotion-21"
            >
              <label
                className="emotion-20"
              >
                <div
                  className="emotion-17"
                >
                  <input
                    className="emotion-14"
                    defaultChecked={false}
                    onClick={[Function]}
                    type="checkbox"
                    value="location.point"
                  />
                  <div
                    className="emotion-16"
                  >
                    <svg
                      className="emotion-15"
                      data-file-name="checkmark.svg"
                      width={20}
                    />
                  </div>
                </div>
                <div
                  className="emotion-19"
                >
                  <span
                    className="emotion-18"
                  >
                    point
                  </span>
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          media
        </h4>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          metrics
        </h4>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          source
        </h4>
      </div>
    </div>
    <div
      className="emotion-4"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          system
        </h4>
      </div>
    </div>
  </div>
  <div
    className="emotion-77"
  >
    <button
      className="emotion-74"
      onClick={[Function]}
      type="button"
    >
      x Cancel
    </button>
    <div
      className="emotion-75"
    />
    <button
      aria-disabled={true}
      className="emotion-76"
      onClick={[Function]}
      type="button"
    >
      + Add Selected Filters
    </button>
  </div>
</div>
`;

exports[`<Filters /> should open the menu 1`] = `
.emotion-71 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-71:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-71[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-71,
.emotion-71:hover,
.emotion-71:visited {
  background-color: #808080;
}

.emotion-71:hover {
  background-color: #b3b3b3;
}

.emotion-71[aria-disabled=true] {
  background-color: #808080;
}

.emotion-75 {
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-70 {
  overflow-x: auto;
}

.emotion-39 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-3 {
  border-bottom: 1px solid #4a4a4a;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 h4 {
  font-weight: 400;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-40:hover {
  color: #ffffff;
}

.emotion-2 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-74 {
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-72 {
  width: 8px;
}

.emotion-73 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-73:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-73[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-73,
.emotion-73:hover,
.emotion-73:visited {
  background-color: #73b61c;
}

.emotion-73:hover {
  background-color: #96c955;
}

.emotion-73[aria-disabled=true] {
  background-color: #808080;
}

.emotion-0 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-0:hover {
  color: #ffffff;
}

.emotion-38 {
  width: 100%;
  background-color: #191919;
}

.emotion-37 {
  padding: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-14 {
  margin-left: -16px;
  margin-right: -16px;
  padding: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  border-top: 4px solid #3b3b3b;
}

.emotion-14:first-of-type {
  padding-top: 0;
  border-top: none;
}

.emotion-14:last-of-type {
  padding-bottom: 0;
}

.emotion-4 {
  font-family: Roboto Mono;
  font-weight: 400;
}

.emotion-13 {
  margin-left: 32px;
  border-top: 1px solid #3b3b3b;
}

.emotion-13:first-of-type {
  border-top: none;
}

.emotion-12 {
  padding: 8px;
  color: #b3b3b3;
  margin-left: -32px;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding-bottom: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-5 {
  margin: 0;
  padding: 0;
  width: 16px;
  height: 16px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-7 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-6 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-10 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 8px;
}

.emotion-9 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
}

<div
  className="emotion-75"
>
  <div
    className="emotion-70"
  >
    <div
      className="emotion-39"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Collapse Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-0"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          analysis
        </h4>
      </div>
      <div
        className="emotion-38"
      >
        <div
          className="emotion-37"
        >
          <div
            className="emotion-14"
          >
            <h4
              className="emotion-4"
            >
              zvi
            </h4>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="analysis.zvi.tinyProxy"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      tinyProxy
                    </span>
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            className="emotion-14"
          >
            <h4
              className="emotion-4"
            >
              zvi-image-similarity
            </h4>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="analysis.zvi-image-similarity.simhash"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      simhash
                    </span>
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            className="emotion-14"
          >
            <h4
              className="emotion-4"
            >
              zvi-object-detection
            </h4>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-12"
              >
                <label
                  className="emotion-11"
                >
                  <div
                    className="emotion-8"
                  >
                    <input
                      className="emotion-5"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="analysis.zvi-object-detection.count"
                    />
                    <div
                      className="emotion-7"
                    >
                      <svg
                        className="emotion-6"
                        data-file-name="checkmark.svg"
                        width={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-10"
                  >
                    <span
                      className="emotion-9"
                    >
                      count
                    </span>
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-39"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-40"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          clip
        </h4>
      </div>
    </div>
    <div
      className="emotion-39"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-40"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          location
        </h4>
      </div>
    </div>
    <div
      className="emotion-39"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-40"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          media
        </h4>
      </div>
    </div>
    <div
      className="emotion-39"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-40"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          metrics
        </h4>
      </div>
    </div>
    <div
      className="emotion-39"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-40"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          source
        </h4>
      </div>
    </div>
    <div
      className="emotion-39"
    >
      <div
        className="emotion-3"
      >
        <button
          aria-label="Expand Section"
          className="emotion-1"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-40"
            color="#808080"
            data-file-name="chevron.svg"
            width={20}
          />
        </button>
        <h4
          className="emotion-2"
        >
          system
        </h4>
      </div>
    </div>
  </div>
  <div
    className="emotion-74"
  >
    <button
      className="emotion-71"
      onClick={[Function]}
      type="button"
    >
      x Cancel
    </button>
    <div
      className="emotion-72"
    />
    <button
      aria-disabled={true}
      className="emotion-73"
      onClick={[Function]}
      type="button"
    >
      + Add Selected Filters
    </button>
  </div>
</div>
`;

exports[`<Filters /> should render properly 1`] = `
Array [
  .emotion-8 {
  padding: 4px;
  border-bottom: 1px solid #191919;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-0,
.emotion-0:hover,
.emotion-0:visited {
  background-color: #73b61c;
}

.emotion-0:hover {
  background-color: #96c955;
}

.emotion-0[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  width: 8px;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #808080;
}

.emotion-2:hover {
  background-color: #b3b3b3;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-4 {
  height: 4px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  padding: 12px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #191919;
}

.emotion-5:focus {
  color: #191919;
  background-color: #ffffff;
}

.emotion-6 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  color: #000000;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

<div
    className="emotion-8"
  >
    <div
      className="emotion-3"
    >
      <button
        className="emotion-0"
        onClick={[Function]}
        type="button"
      >
        + Add Metadata Filters
      </button>
      <div
        className="emotion-1"
      />
      <button
        aria-disabled={true}
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        Clear All Filters
      </button>
    </div>
    <div
      className="emotion-4"
    />
    <form
      action=""
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-7"
      >
        <input
          className="emotion-5"
          onChange={[Function]}
          placeholder="Create text filter (search name or field value)"
          type="text"
          value=""
        />
        <button
          aria-disabled={true}
          aria-label="Search"
          className="emotion-6"
          onClick={[Function]}
          type="submit"
        >
          +
        </button>
      </div>
    </form>
  </div>,
  .emotion-0 {
  overflow: auto;
}

<div
    className="emotion-0"
  />,
]
`;
